# gst-cencdec

./: CMakeLists.txt  README.md
src/: gstcencdec.c  gstcencelements.c
